--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,14 +12,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/md_grey_200">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@mipmap/login_back"
-            android:scaleType="fitXY" />
+        android:background="@color/md_white_1000">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,38 +21,35 @@
             android:orientation="vertical"
             android:padding="20dp">
 
-            <ImageView
-                android:layout_width="@dimen/size_200dp"
-                android:layout_height="@dimen/size_200dp"
-                android:src="@mipmap/logo_1" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="登录"
+                android:textColor="@color/black"
+                android:textSize="30dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="34dp"
-                android:background="@mipmap/user_edit"
+                android:layout_marginTop="@dimen/size_100dp"
+                android:background="@drawable/radius_hui_45"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:padding="16sp">
 
                 <ImageView
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
+                    android:layout_width="@dimen/size_30dp"
+                    android:layout_height="@dimen/size_30dp"
                     android:src="@mipmap/user_icon" />
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@color/textColorHint" />
 
                 <EditText
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@null"
-                    android:hint="请输入用户名"
+                    android:layout_marginLeft="8dp"
+                    android:hint="请输入账号"
                     android:text="@={viewModel.userName}"
                     android:textColor="@color/textColor"
                     android:textColorHint="@color/textColorHint"
@@ -79,22 +69,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@mipmap/user_edit"
+                android:background="@drawable/radius_hui_45"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:padding="16sp">
 
                 <ImageView
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
-                    android:src="@mipmap/password_icon" />
+                    android:layout_width="@dimen/size_30dp"
+                    android:layout_height="@dimen/size_30dp"
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@color/textColorHint" />
+                    android:src="@mipmap/password_icon" />
 
                 <EditText
                     android:id="@+id/et_password"
@@ -102,6 +86,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@null"
+                    android:layout_marginLeft="8dp"
                     android:hint="请输入密码"
                     android:inputType="textPassword"
                     android:text="@={viewModel.password}"
@@ -138,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/radius_blue"
+                android:background="@drawable/radius_orange_10dp"
                 android:orientation="vertical"
                 android:padding="6dp">
 
@@ -150,6 +135,25 @@
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     binding:onClickCommand="@{viewModel.loginOnClickCommand}" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/size_15dp"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="注册表示您已阅读并同意"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="《用户协议》"
+                    android:textColor="#E02020"
+                    />
             </LinearLayout>
 
         </LinearLayout>
